infrastructure/forward-auth/base/deployment.yaml
#
# Traefik Forward Auth Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2
          name: traefik-forward-auth
          ports:
            - containerPort: 4181
              protocol: TCP
              name: auth-http
