infrastructure/forward-auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  type: ClusterIP
  ports:
    - name: auth-http
      port: 4181
      targetPort: 4181
