infrastructure/forward-auth/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
  tls:
    secretName: tls-traefik-forward-auth
